+ fixed jumpscare

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 body {
   background: #caece9;
-  font-family: "Trebuchet MS", sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   font-size: 14px;
 }
 
@@ -12,22 +12,22 @@ a:hover {
   color: #333;
 }
 
-input[type="text"],
-input[type="password"] {
+input[type='text'],
+input[type='password'] {
   background: white;
   border: 1px solid #bfe6e2;
   padding: 2px;
-  font-family: "Trebuchet MS", sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   font-size: 14px;
   border-radius: 2px;
   color: #105751;
 }
 
-input[type="submit"] {
+input[type='submit'] {
   background: #105751;
   border: 1px solid #073b36;
   padding: 1px 3px;
-  font-family: "Trebuchet MS", sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   font-size: 14px;
   font-weight: bold;
   border-radius: 2px;
@@ -152,14 +152,14 @@ div.page div.twitbox p {
   margin: 0;
 }
 
-div.page div.twitbox input[type="text"] {
+div.page div.twitbox input[type='text'] {
   width: 100%;
   box-sizing: border-box;
   display: block;
   margin-bottom: 10px;
 }
 
-div.page div.twitbox input[type="submit"] {
+div.page div.twitbox input[type='submit'] {
   width: 70px;
   margin-left: 5px;
   display: block;
